syntax = "proto3";
package wechaty.puppet;

option csharp_namespace = "github.wechaty.grpc.puppet";
option go_package="github.com/wechaty/go-grpc/wechaty/puppet";
option java_package="io.github.wechaty.grpc.puppet";

message StartRequest {}
message StartResponse {}

message StopRequest {}
message StopResponse {}

message VersionRequest {}
message VersionResponse {
  string version = 1;
}

message LogoutRequest {}
message LogoutResponse {}

message DingRequest {
  string data = 1;
}
message DingResponse {
  // Ding has no return value
  // Puppet should emit a `ding` event when it receives a `ding()` call
}
